src/test/deca/context/invalid/ContextSansObjet/OperationsArithmetiques/MultiplyFloatInt_Int.deca
//Description :
//	Vérification contextuelle du type de sortie de * avec pour entrée <int, float>
//
//Résultats :
//  Erreur contextuelle
//	ligne 9 : type incompatible

{
    int x = 1*3.0;
}